Increase margin-bottom of invoice cards

--- a/reviewer.html
+++ b/reviewer.html
@@ -87,7 +87,7 @@
         .invoice-card {
             border: none;
             border-radius: 18px;
-            margin-bottom: 2.2rem; /* Increased by 0.7rem */
+            margin-bottom: 3.9rem; /* Increased by 0.7rem */
             transition: var(--transition);
             position: relative;
             background: var(--surface);
@@ -95,6 +95,7 @@
             border: 1px solid rgba(255, 255, 255, 0.5);
             box-shadow: 0 4px 20px rgba(0, 0, 0, 0.05);
             overflow: hidden;
+            background-color: #f6f9fe0d;   
         }
 
         .invoice-card::before {
