--- a/kpimatrics.html
+++ b/kpimatrics.html
@@ -1,4 +1,3 @@
-
 <!DOCTYPE html>
 <html lang="en">
 <head>
@@ -218,35 +217,35 @@
             100% { opacity: 1; }
         }
 
-        /* Column width adjustments for table */
+        /* Column width adjustments for table - now full width */
         .data-table th:nth-child(1),
         .data-table td:nth-child(1) {
-            width: 12%;
+            width: 15%;
         }
 
         .data-table th:nth-child(2),
         .data-table td:nth-child(2) {
-            width: 18%;
+            width: 20%;
         }
 
         .data-table th:nth-child(3),
         .data-table td:nth-child(3) {
-            width: 30%;
+            width: 25%;
         }
 
         .data-table th:nth-child(4),
         .data-table td:nth-child(4) {
-            width: 12%;
+            width: 15%;
         }
 
         .data-table th:nth-child(5),
         .data-table td:nth-child(5) {
-            width: 12%;
+            width: 15%;
         }
 
         .data-table th:nth-child(6),
         .data-table td:nth-child(6) {
-            width: 16%;
+            width: 10%;
         }
 
         @media (max-width: 992px) {            
@@ -325,7 +324,7 @@
                 </div>
             </div>
             <div class="data-table">
-                <table>
+                <table style="width: 100%">
                     <thead>
                         <tr>
                             <th>Department</th>
