--- a/admin.html
+++ b/admin.html
@@ -128,9 +128,10 @@
         }
 
         .neo-data-table-wrapper {
-            max-height: 240px;
+            max-height: 230px;
             overflow-y: auto;
             overflow-x: auto;
+            min-height: 230px;
         }
 
         .neo-data-table {
